--- a/package.json
+++ b/package.json
@@ -1,57 +1,57 @@
 {
-  "homepage": "https://krishna-saparia.github.io/React-Single-Page-Portfolio",
-  "name": "react-web-smooth-scroll",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "5.11.9",
-    "@testing-library/react": "11.2.3",
-    "@testing-library/user-event": "^12.6.0",
-    "chart.js": "2.9.4",
-    "prop-types": "15.7.2",
-    "react": "17.0.1",
-    "react-chartjs-2": "2.11.1",
-    "react-dom": "17.0.1",
-    "react-icons": "4.1.0",
-    "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.1",
-    "react-scroll": "1.8.1",
-    "react-spinners": "0.10.6",
-    "react-svg": "^11.2.3",
-    "styled-components": "5.2.1",
-    "web-vitals": "0.2.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@material-ui/core": "4.11.3",
-    "@material-ui/icons": "4.11.2",
-    "@material-ui/lab": "4.0.0-alpha.57",
-    "gh-pages": "^3.2.3",
-    "react-vertical-timeline-component": "^3.3.3"
-  }
+    "homepage": "https://krishna-saparia.github.io/Portfolio",
+    "name": "react-web-smooth-scroll",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@testing-library/jest-dom": "5.11.9",
+        "@testing-library/react": "11.2.3",
+        "@testing-library/user-event": "^12.6.0",
+        "chart.js": "2.9.4",
+        "prop-types": "15.7.2",
+        "react": "17.0.1",
+        "react-chartjs-2": "2.11.1",
+        "react-dom": "17.0.1",
+        "react-icons": "4.1.0",
+        "react-router-dom": "5.2.0",
+        "react-scripts": "4.0.1",
+        "react-scroll": "1.8.1",
+        "react-spinners": "0.10.6",
+        "react-svg": "^11.2.3",
+        "styled-components": "5.2.1",
+        "web-vitals": "0.2.4"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@material-ui/core": "4.11.3",
+        "@material-ui/icons": "4.11.2",
+        "@material-ui/lab": "4.0.0-alpha.57",
+        "gh-pages": "^3.2.3",
+        "react-vertical-timeline-component": "^3.3.3"
+    }
 }
